--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <h1>
         Hello Git
     </h1>
-
+    <h2>
+        первое изменение
+    </h2>
+    <script src="script.js"></script>
 </body>
 
 </html>
