--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h2>
         первое изменение
     </h2>
+    <div class="foto">
+        <img src="image/Screenshot (42).png" alt="">
+    </div>
     <script src="script.js"></script>
 </body>
 
