--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>
         первое изменение
     </h2>
+    <h2>
+        надо работать
+
+    </h2>
     <div class="foto">
         <img src="image/Screenshot (42).png" alt="">
     </div>
