--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </h2>
     <div class="foto">
         <img src="image/Screenshot (42).png" alt="">
+        <img src="image/Screenshot (84).png" alt="">
     </div>
     <script src="script.js"></script>
 </body>
